[gd_scene load_steps=4 format=3 uid="uid://ujxmlftkdcgc"]

[ext_resource type="Script" path="res://Scripts/enemy_bullet.gd" id="1_446dw"]
[ext_resource type="Texture2D" uid="uid://chpdyytl81ltp" path="res://Sprite/Player/Tomato.png" id="2_cbsg6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0gglk"]
radius = 6.0

[node name="EnemyBullet" type="CharacterBody2D" groups=["enemyBullet"]]
z_index = 2
scale = Vector2(0.5, 0.5)
collision_layer = 64
collision_mask = 3
script = ExtResource("1_446dw")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_cbsg6")

[node name="Hitbox" type="Area2D" parent="." groups=["enemyBullet"]]
collision_layer = 64
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox" groups=["enemyBullet"]]
shape = SubResource("CircleShape2D_0gglk")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(5.96046e-08, 9.53674e-08)
scale = Vector2(0.2, 0.1)

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
